--- a/app/src/main/res/drawable/bg_icon_black.xml
+++ b/app/src/main/res/drawable/bg_icon_black.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <!-- Cor preta -->
-    <solid android:color="@android:color/black" />
+    <solid android:color="@color/primary_dark" />
     <!-- Cantos arredondados -->
     <corners android:radius="12dp" />
 </shape>
