--- a/app/src/main/res/drawable/bg_rounded_gray.xml
+++ b/app/src/main/res/drawable/bg_rounded_gray.xml
@@ -1,4 +1,4 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="#D8DADA"/>
+    <solid android:color="#267D7777"/>
     <corners android:radius="12dp"/>
 </shape>
