--- a/app/src/main/res/drawable/white_card_background.xml
+++ b/app/src/main/res/drawable/white_card_background.xml
@@ -1,6 +1,6 @@
 <!-- res/drawable/white_card_background.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#FFF5F0" /> <!-- ou branco puro: #FFFFFF -->
+    <solid android:color="#E7F0F7" /> <!-- ou branco puro: #FFFFFF -->
     <corners android:topLeftRadius="50dp" android:topRightRadius="50dp" />
 </shape>
