--- a/app/src/main/res/layout/historico.xml
+++ b/app/src/main/res/layout/historico.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#1F1711"
+    android:background="@color/primary_dark"
     tools:context=".HistoricoActivity">
 
     <!-- Área branca sobreposta ao fundo preto -->
@@ -27,7 +27,7 @@
             android:text="Hoje, sexta-feira 15 de Agosto"
             android:textSize="17sp"
             android:textStyle="bold"
-            android:textColor="#555555"/>
+            android:textColor="@color/primary_dark"/>
 
 
         <LinearLayout
@@ -36,7 +36,7 @@
             android:layout_margin="12dp"
             android:padding="12dp"
             android:orientation="horizontal"
-            android:background="@drawable/bg_card">
+            android:background="@drawable/bg_rounded_gray">
 
             <ImageView
                 android:layout_width="48dp"
@@ -85,7 +85,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="12dp"
-            android:background="@drawable/bg_card"
+            android:background="@drawable/bg_rounded_gray"
             android:orientation="horizontal"
             android:padding="12dp">
 
@@ -139,7 +139,7 @@
             android:text="Ontem, quinta-feira 14 de Agosto"
             android:textSize="17sp"
             android:textStyle="bold"
-            android:textColor="#555555"/>
+            android:textColor="@color/primary_dark"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -148,7 +148,7 @@
             android:padding="12dp"
             android:layout_marginBottom="20dp"
             android:orientation="horizontal"
-            android:background="@drawable/bg_card">
+            android:background="@drawable/bg_rounded_gray">
 
             <ImageView
                 android:layout_width="48dp"
@@ -198,7 +198,7 @@
             android:layout_margin="12dp"
             android:padding="12dp"
             android:orientation="horizontal"
-            android:background="@drawable/bg_card">
+            android:background="@drawable/bg_rounded_gray">
 
             <ImageView
                 android:layout_width="48dp"
@@ -255,7 +255,7 @@
         android:layout_height="60dp"
         android:layout_alignParentBottom="true"
         android:orientation="horizontal"
-        android:background="#F4AB50"
+        android:background="#FFFFFF"
         android:weightSum="3"
         android:gravity="center_vertical"
         android:elevation="8dp">
@@ -267,7 +267,7 @@
             android:layout_weight="1"
             android:src="@drawable/ic_historico"
             android:background="@android:color/transparent"
-            app:tint="#000000"
+            app:tint="#3A7BFB"
             android:contentDescription="Botão de histórico"/>
 
         <ImageButton
@@ -277,7 +277,7 @@
             android:layout_weight="1"
             android:src="@drawable/ic_home"
             android:background="@android:color/transparent"
-            app:tint="#000000"
+            app:tint="#66000000"
             android:contentDescription="Botão Home"/>
 
         <ImageButton
@@ -287,19 +287,20 @@
             android:layout_weight="1"
             android:src="@drawable/ic_settings"
             android:background="@android:color/transparent"
-            app:tint="#000000"
+            app:tint="#66000000"
             android:contentDescription="Botão de configurações"/>
     </LinearLayout>
 
 
     <TextView
         android:id="@+id/txtTitulo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:layout_marginStart="20dp"
+        android:layout_width="130dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="40dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="40dp"
         android:text="Histórico"
         android:textColor="#ffff"
         android:textSize="30dp"
