--- a/app/src/main/res/layout/historico.xml
+++ b/app/src/main/res/layout/historico.xml
@@ -2,253 +2,235 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/primary_dark"
+    android:background="@color/bg_light"
     tools:context=".HistoricoActivity">
 
-    <!-- Área branca sobreposta ao fundo preto -->
+    <!-- CABEÇALHO GRADIENTE -->
     <LinearLayout
-        android:id="@+id/containerHistorico"
+        android:id="@+id/header"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="150dp"
+        android:layout_height="220dp"
         android:orientation="vertical"
-        android:background="@drawable/bg_white_top_rounded">
-
-        <!-- Título -->
-
-        <!-- O DIA -->
+        android:gravity="center"
+        android:background="@drawable/bg_header_gradient"
+        android:paddingTop="16dp">
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/ic_history" />
         <TextView
+            android:id="@+id/txtTitulo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginTop="20dp"
-            android:text="Hoje, sexta-feira 15 de Agosto"
-            android:textSize="17sp"
+            android:text="Histórico"
+            android:textColor="@color/white"
+            android:textSize="26sp"
             android:textStyle="bold"
-            android:textColor="@color/primary_dark"/>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="12dp"
-            android:padding="12dp"
-            android:orientation="horizontal"
-            android:background="@drawable/bg_rounded_gray">
-
-            <ImageView
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:padding="8dp"
-                android:background="@drawable/bg_icon_black"
-                android:src="@drawable/ic_image"
-                android:layout_gravity="center_vertical"/>
-
-
-            <LinearLayout
-                android:layout_width="177dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:orientation="vertical">
-
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Almoço do Lula.jpg"
-                    android:textColor="#000000"
-                    android:textSize="16sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Enviado para: Moto E20"
-                    android:textColor="#777777"
-                    android:textSize="13sp" />
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="38dp"
-                android:layout_height="12dp"
-                android:layout_gravity="center_vertical"
-                android:text="11:47"
-                android:layout_marginLeft="70dp"
-                android:textColor="#777777"
-                android:textSize="13sp" />
-        </LinearLayout>]
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="12dp"
-            android:background="@drawable/bg_rounded_gray"
-            android:orientation="horizontal"
-            android:padding="12dp">
-
-            <ImageView
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:layout_gravity="center_vertical"
-                android:background="@drawable/bg_icon_black"
-                android:padding="7dp"
-                android:src="@drawable/music_file" />
-
-
-            <LinearLayout
-                android:layout_width="177dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:orientation="vertical">
-
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Anitta.mp3"
-                    android:textColor="#000000"
-                    android:textSize="16sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Enviado para: Moto E20"
-                    android:textColor="#777777"
-                    android:textSize="13sp" />
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="38dp"
-                android:layout_height="12dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="70dp"
-                android:text="11:47"
-                android:textColor="#777777"
-                android:textSize="13sp" />
-        </LinearLayout>
+            android:layout_marginTop="10dp"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginTop="20dp"
-            android:text="Ontem, quinta-feira 14 de Agosto"
-            android:textSize="17sp"
-            android:textStyle="bold"
-            android:textColor="@color/primary_dark"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="12dp"
-            android:padding="12dp"
-            android:layout_marginBottom="20dp"
-            android:orientation="horizontal"
-            android:background="@drawable/bg_rounded_gray">
-
-            <ImageView
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:padding="8dp"
-                android:background="@drawable/bg_icon_black"
-                android:src="@drawable/file"
-                android:layout_gravity="center_vertical"/>
-
-
-            <LinearLayout
-                android:layout_width="177dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:orientation="vertical">
-
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="TCC.docx"
-                    android:textColor="#000000"
-                    android:textSize="16sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Enviado para: Moto E20"
-                    android:textColor="#777777"
-                    android:textSize="13sp" />
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="38dp"
-                android:layout_height="12dp"
-                android:layout_gravity="center_vertical"
-                android:text="11:47"
-                android:layout_marginLeft="70dp"
-                android:textColor="#777777"
-                android:textSize="13sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="12dp"
-            android:padding="12dp"
-            android:orientation="horizontal"
-            android:background="@drawable/bg_rounded_gray">
-
-            <ImageView
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:padding="8dp"
-                android:background="@drawable/bg_icon_black"
-                android:src="@drawable/ic_image"
-                android:layout_gravity="center_vertical"/>
-
-
-            <LinearLayout
-                android:layout_width="177dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:orientation="vertical">
-
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Almoço do Lula.jpg"
-                    android:textColor="#000000"
-                    android:textSize="16sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Enviado para: Moto E20"
-                    android:textColor="#777777"
-                    android:textSize="13sp" />
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="38dp"
-                android:layout_height="12dp"
-                android:layout_gravity="center_vertical"
-                android:text="11:47"
-                android:layout_marginLeft="70dp"
-                android:textColor="#777777"
-                android:textSize="13sp" />
-        </LinearLayout>
-
-
-
-        <!-- Repita os outros cards (Documentação, APKs, Áudios) de forma semelhante -->
-
+            android:text="Envios e recebimentos recentes"
+            android:textColor="@color/blue_100"
+            android:textSize="14sp"/>
     </LinearLayout>
 
-    <!-- MENU INFERIOR -->
+    <!-- CONTEÚDO SCROLL -->
+    <ScrollView
+        android:id="@+id/scrollContent"
+        android:layout_below="@id/header"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="16dp"
+        android:clipToPadding="false">
+
+        <LinearLayout
+            android:id="@+id/containerHistorico"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <!-- DIA DE HOJE -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:layout_marginBottom="8dp"
+                android:text="Hoje, sexta-feira 15 de Agosto"
+                android:textSize="17sp"
+                android:textStyle="bold"
+                android:textColor="@color/primary_dark"/>
+
+            <!-- CARD 1 -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
+                android:orientation="horizontal"
+                android:background="@drawable/bg_card_white"
+                android:elevation="3dp"
+                android:padding="12dp">
+
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center_vertical"
+                    android:background="@drawable/bg_button_gradient"
+                    android:padding="12dp"
+                    android:src="@drawable/ic_image"/>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_marginStart="10dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Almoço do Lula.jpg"
+                        android:textColor="#000000"
+                        android:textSize="16sp"
+                        android:textStyle="bold"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Enviado para: Moto E20"
+                        android:textColor="#777"
+                        android:textSize="13sp"/>
+                </LinearLayout>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:text="11:47"
+                    android:textColor="#777"
+                    android:textSize="13sp"/>
+            </LinearLayout>
+
+            <!-- CARD 2 -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
+                android:orientation="horizontal"
+                android:background="@drawable/bg_card_white"
+                android:elevation="3dp"
+                android:padding="12dp">
+
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center_vertical"
+                    android:background="@drawable/bg_button_gradient"
+                    android:padding="14dp"
+                    android:src="@drawable/music_file" />
+
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_marginStart="10dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Anitta.mp3"
+                        android:textColor="#000000"
+                        android:textSize="16sp"
+                        android:textStyle="bold"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Enviado para: Moto E20"
+                        android:textColor="#777"
+                        android:textSize="13sp"/>
+                </LinearLayout>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:text="11:47"
+                    android:textColor="#777"
+                    android:textSize="13sp"/>
+            </LinearLayout>
+
+            <!-- DIA ANTERIOR -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="8dp"
+                android:text="Ontem, quinta-feira 14 de Agosto"
+                android:textSize="17sp"
+                android:textStyle="bold"
+                android:textColor="@color/primary_dark"/>
+
+            <!-- CARD 3 -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
+                android:orientation="horizontal"
+                android:background="@drawable/bg_card_white"
+                android:elevation="3dp"
+                android:padding="12dp">
+
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center_vertical"
+                    android:background="@drawable/bg_button_gradient"
+                    android:padding="15dp"
+                    android:src="@drawable/file" />
+
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_marginStart="10dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="TCC.docx"
+                        android:textColor="#000000"
+                        android:textSize="16sp"
+                        android:textStyle="bold"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Enviado para: Moto E20"
+                        android:textColor="#777"
+                        android:textSize="13sp"/>
+                </LinearLayout>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:text="11:47"
+                    android:textColor="#777"
+                    android:textSize="13sp"/>
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
+
+    <!-- RODAPÉ BONITO (MANTIDO) -->
     <LinearLayout
         android:id="@+id/bottomBar"
         android:layout_width="match_parent"
@@ -290,20 +272,4 @@
             app:tint="#66000000"
             android:contentDescription="Botão de configurações"/>
     </LinearLayout>
-
-
-    <TextView
-        android:id="@+id/txtTitulo"
-        android:layout_width="130dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginBottom="40dp"
-        android:text="Histórico"
-        android:textColor="#ffff"
-        android:textSize="30dp"
-        android:textStyle="bold" />
-
 </RelativeLayout>
