--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,8 +8,17 @@
     <color name="primary_blue">#2979FF</color>
     <color name="primary_dark">#283653</color>
     <color name="cards_cinzas">#D9D9D9</color>
-    <color name="text_primary">#1B1E28</color>
-    <color name="text_secondary">#5A5D6A</color>
-    <color name="fundo_azulado">#E7F0F7</color>
+   <color name="fundo_azulado">#E7F0F7</color>
+    <color name="blue_900">#0D47A1</color>
+    <color name="blue_700">#1976D2</color>
+    <color name="blue_500">#2196F3</color>
+    <color name="blue_100">#E3F2FD</color>
+    <color name="bg_light">#F8FAFD</color>
+    <color name="text_primary">#263238</color>
+    <color name="text_secondary">#546E7A</color>
+    <color name="divider">#E1F0FF</color>
+    android:textColor="@android:color/black"
+    android:textColor="@android:color/darker_gray"
+
 
 </resources>
