--- a/app/src/main/res/layout/activity_device_list.xml
+++ b/app/src/main/res/layout/activity_device_list.xml
@@ -64,7 +64,8 @@
             android:textColor="@color/white"
             android:textSize="16sp"
             android:padding="16dp"
-            android:layout_marginBottom="16dp" />
+            android:layout_marginBottom="16dp"
+            app:backgroundTint="@null"/>
 
         <!-- Lista de Dispositivos -->
         <TextView
