--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -108,7 +108,8 @@
                 android:paddingHorizontal="18dp"
                 android:paddingVertical="8dp"
                 android:background="@drawable/bg_button_gradient"
-                android:elevation="3dp" />
+                android:elevation="3dp"
+                app:backgroundTint="@null"/>
         </LinearLayout>
 
         <!-- Histórico de dispositivos -->
@@ -158,8 +159,9 @@
             android:textColor="@android:color/white"
             android:fontFamily="sans-serif-medium"
             android:padding="14dp"
-            android:background="#1A8CE0"
-            android:elevation="4dp" />
+            android:background="@drawable/bg_button_gradient"
+            android:elevation="4dp"
+            app:backgroundTint="@null"/>
     </LinearLayout>
     <!-- MENU INFERIOR -->
     <LinearLayout
